# Code-Editor

./: CMakeCache.txt  CMakeLists.txt  CodeEditor  Makefile  cmake_install.cmake  compile_commands.json  main
.cache/clangd/index/: editor.cpp.C1BD4FB518007ECF.idx  filemanager.cpp.CEE74976FF177CBA.idx  main.cpp.10693A1F84DB5375.idx  mocs_compilation.cpp.D8ED0982796AB025.idx  syntax.cpp.5A61B7F2BC768D23.idx  ui.cpp.5EDDFC0317462926.idx
.qt/: QtDeploySupport.cmake
CodeEditor_autogen/: deps
frontend/: ui.py
resources/themes/: dark.json
src/: editor.cpp  filemanager.cpp  main.cpp  syntax.cpp  ui.cpp
test/: main  main.cpp  run.sh
